Update main font

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,7 +10,7 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Lora:400,400italic|Work+Sans:300,400,500,600|Libre+Baskerville:400,400bold|Crimson+Text">
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Lora:400,400italic|Work+Sans:300,400,500,600|Libre+Baskerville:400,400bold|Lato:300,400|Open+Sans:300,400|Source+Sans+Pro:300,400">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
