--- a/client/public/index.html
+++ b/client/public/index.html
@@ -38,5 +38,6 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
     <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
+    <script src='https://www.google.com/recaptcha/api.js'></script>
   </body>
 </html>
