Add 32x32 pixel icon

--- a/web_client/public/index.html
+++ b/web_client/public/index.html
@@ -9,7 +9,7 @@
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <link rel="shortcut icon" type="image/png" href="%PUBLIC_URL%/favicon-32x32.png" sizes="32x32">
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Lora:400,400italic|Work+Sans:300,400,500,600|Libre+Baskerville:400,400bold|Lato:300,400|Open+Sans:300,400|Source+Sans+Pro:300,400">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
